# liqwid-plutarch-template

./: .envrc  .gitignore  .gitmodules  .justfile  README.md  flake.nix  jambhalarch.cabal  ready?
app/: Main.hs
scripts/: fix-submodules.sh
src/: Contracts.hs  Utils.hs
src/Contracts/Samples/: Simple.hs
src/Jambhalarch/: CLI.hs  Utils.hs
src/Jambhalarch/CLI/: Export.hs  Parsers.hs  Types.hs
src/Samples/: Simple.hs
